<resources>
    <string name="OssAccessKey">OssAccessKey:</string>
    <string name="OssBucket">OssBucket:</string>
    <string name="OssEndPoint">OssEndPoint:</string>
    <string name="OssSecretKey">OssSecretKey:</string>
    <string name="OssStreamingFile">OssStreamingFile:</string>
    <string name="SerialNumber">SerialNumber:</string>
    <string name="_1">the link is valid for 2 hours</string>
    <string name="_123456789"> default password: 12345678</string>
    <string name="_1_wi_fi">1. Make sure the dashcam is on, with the power indicator light constantly on</string>
    <string name="_2_a6_xxxxxx_wi_fi">2. Connect to the Wi-Fi named Goluk-M1-XXXX on your phone settings</string>
    <string name="_8_15">The password must be 8-15 characters. After changing your password, your phone will be disconnected from Goluk and will need to be reconnected using your new password</string>
    <string name="about">About</string>
    <string name="accpect">Accept</string>
    <string name="adas_calibration">ADAS Calibration</string>
    <string name="adas_calibration_tip">将在实时预览全屏模式下校准</string>
    <string name="adas_report">前车碰撞预警</string>
    <string name="adas_report2">车道偏离预警</string>
    <string name="adas_report3">前车起步提示</string>
    <string name="adas_setting">ADAS</string>
    <string name="already_new">The current version is up to date</string>
    <string name="altitude">Altitude</string>
    <string name="app_about">Product introduction</string>
    <string name="app_m1_name">Goluk Care</string>
    <string name="app_name">Goluk Care</string>
    <string name="app_version">Client version\n V %1$s</string>
    <string name="authorize_failed">Authorize fail</string>
    <string name="authorize_suss">Authorize succeed</string>
    <string name="autiorize_cancel">Authorize cancel</string>
    <string name="auto_save_m1">1 minutes</string>
    <string name="auto_save_m2">2 minutes</string>
    <string name="auto_save_m3">3 minutes</string>
    <string name="auto_sleep">Enter Sleep if Not Moving</string>
    <string name="auto_sleep_15minutes">15 minutes after stopping</string>
    <string name="auto_sleep_30minutes">30 minutes after stopping</string>
    <string name="auto_sleep_60minutes">60 minutes after stopping</string>
    <string name="auto_sleep_forbidden">Never sleep when stopping</string>
    <string name="auto_sleep_m15">15 minutes</string>
    <string name="auto_sleep_m30">30 minutes</string>
    <string name="auto_sleep_m60">60 minutes</string>
    <string name="auto_sleep_mf">Never</string>
    <string name="autosave_time_title">Rotating video clip duration</string>
    <string name="aval">Available</string>
    <string name="avg_speed">Average speed </string>
    <string name="back">Back</string>
    <string name="back_cam">Back</string>
    <string name="back_cam_qua">Back camera video quality</string>
    <string name="bonduser">Family sharing</string>
    <string name="cam_setting">Camera settings</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_open_broswer">找不到浏览器</string>
    <string name="capture_complete">Snapshot success</string>
    <string name="capture_file">Captured</string>
    <string name="capture_short_video">10s Video Capture</string>
    <string name="capture_short_video_time">%1$ds Video Capture</string>
    <string name="car_cling_item">Share DVR\'s video and photo to people</string>
    <string name="car_cling_title">Car Life</string>
    <string name="carlife_photo_video">Photo and Video</string>
    <string name="catch_hint">Captured an exciting video</string>
    <string name="catch_message">Capture alert</string>
    <string name="check_upgrade">Checking for updates...</string>
    <string name="choose_video">Choose Video</string>
    <string name="clean_history_address">Clear history</string>
    <string name="click_to_connect">Connect to dashcam</string>
    <string name="cling_dismiss">Confirm</string>
    <string name="com_facebook_dialogloginactivity_ok_button">Confirm</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="con_cam">Connect to dashcam</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="connect_ap_fail">Failed to connect DVR</string>
    <string name="connect_ap_success">Connected to DVR</string>
    <string name="connect_ipc">Connect to dashcam</string>
    <string name="connect_service">Contact us</string>
    <string name="connecting_ap">Connecting</string>
    <string name="copy">Link copied to clipboard</string>
    <string name="copy_link">Copy invitation link</string>
    <string name="copy_right">Copyright©Goluk Care. All Rights Reserved</string>
    <string name="copy_right_1">Copyright©Goluk Care. All Rights Reserved</string>
    <string name="count_identify_count_six_limit">Unable to obtain verification code. This phone number has reached the maximum attempts to obtain a verification code (4 times per day)</string>
    <string name="crash_tip">An error occurred</string>
    <string name="delete_bindid_error">Unable to delete，Please try again later</string>
    <string name="delete_device">If you delete the device, you will not be able to view the remote monitoring on the device</string>
    <string name="delete_error">Unable to delete，Please try again later</string>
    <string name="delete_family_error">Unable to delete，Please try again later</string>
    <string name="delete_file">Delete</string>
    <string name="delete_ok">Delete</string>
    <string name="delete_user">Stop sharing and delete this family member\'s vehicle monitoring and other data</string>
    <string name="delete_video">Confirm Delete</string>
    <string name="deleting_files">Deleting</string>
    <string name="device">Dashcam</string>
    <string name="device_manage">Device management</string>
    <string name="device_volume">Alert volume</string>
    <string name="download_file">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_file">Downloading</string>
    <string name="dvr_restart">Restart Recording</string>
    <string name="dvr_restart_tips">Some setting need restarting DVR</string>
    <string name="edit_file">Modified</string>
    <string name="email_account">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="email_invalid">Please enter a valid email address</string>
    <string name="email_not_registered">This Email has not yet been registered</string>
    <string name="error">Network error.</string>
    <string name="event">Event</string>
    <string name="event101">suddenly slowed down</string>
    <string name="event102">急转弯</string>
    <string name="event103">急起伏</string>
    <string name="event104">SOS</string>
    <string name="event_100">Road emergency alert</string>
    <string name="event_200">Parking abnormal event alert</string>
    <string name="event_201">异常移动</string>
    <string name="event_202">abnormally vibrating</string>
    <string name="event_203">移动侦测</string>
    <string name="event_204">驶出停车围栏</string>
    <string name="event_300">车辆启停事件</string>
    <string name="event_301">车辆熄火</string>
    <string name="event_302">车辆点火</string>
    <string name="event_400">Capture</string>
    <string name="event_argent">Road emergency alert</string>
    <string name="event_detail">Event details</string>
    <string name="exception_hint">The car was abnormally vibrating when parked</string>
    <string name="exception_hint_1">The car was abnormally vibrating when parking</string>
    <string name="exit">Exit</string>
    <string name="family">Family sharing</string>
    <string name="family_share_hint">With our Family Sharing feature, you and your family members may share car monitorings, location information, and road activities with each other.</string>
    <string name="famly_users">Family members</string>
    <string name="file_tip">DVR Files</string>
    <string name="formating">Formatting</string>
    <string name="front_cam">Front</string>
    <string name="front_cam_qua">Front camera video quality</string>
    <string name="goluk">Goluk</string>
    <string name="gps_watermark">Show GPS watermark</string>
    <string name="gsensor">Enable Wake Up when Collision</string>
    <string name="gsensor_detail">Device wakes if detect collision in sleeping mode</string>
    <string name="hardware_version">Firmware version</string>
    <string name="help">User instructions</string>
    <string name="high">1080P High</string>
    <string name="hint">Tips</string>
    <string name="imgdes">Image description</string>
    <string name="input_pwd">Please enter password (6-16 characters)</string>
    <string name="input_sos_name">Please enter emergency contact name</string>
    <string name="input_sos_phone">Please enter contact mobile number</string>
    <string name="invite_famly">Family Sharing Invitation</string>
    <string name="invite_famly_users">Invite family members</string>
    <string name="ip_setting">Devices</string>
    <string name="km">km</string>
    <string name="kmh">km/h</string>
    <string name="live">Monitoring</string>
    <string name="lock_file">Event</string>
    <string name="loop_file">Loop</string>
    <string name="multiple">Edit</string>
    <string name="no_file">No Videos</string>
    <string name="no_remote_file">No Videos</string>
    <string name="not_connected_at_this_time">Disconnected</string>
    <string name="select_all">Select All</string>
    <string name="str_camera_text">Take Photo</string>
    <string name="str_choose_in_album">Choose from album</string>
    <string name="str_system_head">System Avatar</string>
    <string name="tab_phone_file">Local</string>
    <string name="user_cancle">Cancel</string>
    <string name="apn_name">Name</string>
    <string name="apn">APN</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mnc">MNC</string>
    <string name="submit">Confirm</string>
    <string name="pwd_old">Old password</string>
    <string name="pwd_new">New password</string>
    <string name="input_old_pwd">Enter Old password (6-16 characters)</string>
    <string name="input_new_pwd"> Enter new password(6-16 characters)</string>
</resources>