<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:layout_marginBottom="16dp"
              android:background="@drawable/custom_dialog_bg"
              android:orientation="vertical">

    <TextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/str_camera_text"
        android:textColor="@drawable/selector_font_black"
        android:textSize="16sp"/>

    <View
        style="@style/LineDivider"/>

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/str_choose_in_album"
        android:textColor="@drawable/selector_font_black"
        android:textSize="16sp"/>

    <View
        style="@style/LineDivider"/>

    <TextView
        android:id="@+id/system"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/str_system_head"
        android:textColor="@drawable/selector_font_black"
        android:textSize="16sp"
        android:visibility="gone"/>

    <View
        style="@style/LineDivider"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/user_cancle"
        android:textColor="@drawable/selector_font_black"
        android:textSize="16sp"/>

</LinearLayout>