<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_app_version"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/copy_right"
        android:textColor="@android:color/tertiary_text_light" />


    <TextView
        android:id="@+id/top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/top"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/copy_right_2"
        android:textColor="@android:color/tertiary_text_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/top2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/goluk_logo" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/app_m1_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_app_version_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_new"
            android:textColor="@color/gray" />
    </LinearLayout>


</RelativeLayout>
