<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/apn_name"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_apn_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/apn"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/apn_mcc"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_apn_mcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/apn_mnc"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_apn_mnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>



</LinearLayout>