<?xml version="1.0" encoding="utf-8"?>
<!-- 修改密码页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/user_login_bg"
              android:orientation="vertical">

    <include layout="@layout/layout_common_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/pwd_old"
            android:textColor="@color/font_3C"
            android:textSize="16sp"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/edit_pwd_old"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_old_pwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColor="@color/font_3C"
            android:textColorHint="@color/font_edit_hint"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/pwd_new"
            android:textColor="@color/font_3C"
            android:textSize="16sp"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/edit_pwd_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColor="@color/font_3C"
            android:textColorHint="@color/font_edit_hint"
            android:textSize="16sp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_red_btn"
        android:clickable="true"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"/>


</LinearLayout>